fix(hero-image): too wide hero image on some resolutions
Added min-height for element containing hero image
to prevent hero image to be ugly cut when short & wide

Fixes #1

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -9,3 +9,7 @@ $padding-default: 2rem;
 // SLANT ELEMENTS
 $slant-horizontal: 2rem; //slant parameter for rows
 $slant-vertical: 20rem; //slant parameter for columns (desktop resolutions only)
+
+// HERO IMAGE
+$hero-small-min-height: 17rem;
+$hero-bigger-min-height: 36rem;
